[package]
name = "rpgdk"
version = "1.2.4"
authors = ["Christi Miller <christi@christimiller.net>"]
edition = "2018"
description = "A Roll-Playing Game Development Kit suited for (but not limited to) text adventure games."
license = "MIT"
homepage = "http://rpgdk.com"
repository = "https://github.com/christimiller/rpgdk"
documentation = "https://docs.rs/rpgdk/"
readme = "README.md"
keywords = ["rpg", "games", "gaming", "tools", "sdk"]
categories = ["game-development", "game-engines", "games", "development-tools"]

[dependencies]
rand = "0.7.2"
